<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".stayplaceActivity">

    <TextView
        android:id="@+id/textview3"
        android:layout_width="352dp"
        android:layout_height="49dp"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:text="@string/wait_point"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/placename"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/placename"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/searchplace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview3"
        app:layout_constraintVertical_bias="0.434" />

    <Button
        android:id="@+id/searchplace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="searchplace"
        android:text="@string/search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.379" />

</androidx.constraintlayout.widget.ConstraintLayout>