<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".stay_time_activity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="362dp"
        android:layout_height="64dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/time_set"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091" />

    <EditText
        android:id="@+id/min"
        android:layout_width="94dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="49dp"
        android:layout_marginBottom="68dp"

        android:gravity="right"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/save"
        app:layout_constraintEnd_toStartOf="@+id/textView11"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/hour"
        android:layout_width="94dp"
        android:layout_height="50dp"
        android:layout_marginTop="49dp"
        android:layout_marginBottom="387dp"
        android:gravity="right"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="save"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.603" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/how_time"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:text="24時間形式です"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="94dp"
        android:layout_height="50dp"
        android:layout_marginTop="49dp"
        android:layout_marginBottom="68dp"
        android:gravity="center"
        android:text="@string/hour"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/save"
        app:layout_constraintStart_toEndOf="@+id/hour"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="94dp"
        android:layout_height="50dp"
        android:layout_marginTop="49dp"
        android:layout_marginBottom="387dp"
        android:gravity="center"
        android:text="@string/min"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

</androidx.constraintlayout.widget.ConstraintLayout>