<?xml version="1.0" encoding="utf-8"?>
<!--
『Androidアプリ開発の教科書』
第11章
Web API連携サンプル

@author Shinzo SAITO

ファイル名=activity_main.xml
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity">


	<TextView
		android:id="@+id/textView7"
		android:layout_width="356dp"
		android:layout_height="66dp"
		android:layout_marginStart="39dp"
		android:layout_marginEnd="39dp"
		android:gravity="center"
		android:text="@string/weather_information"
		android:textSize="30dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.521"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/weathereditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="96dp"
        android:layout_marginBottom="149dp"
        android:hint="@string/weather_point"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

	<Button
		android:id="@+id/search"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="372dp"
		android:onClick="serch"
		android:text="@string/search"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.498"
		app:layout_constraintStart_toStartOf="parent" />

	<TextView
		android:id="@+id/nowweather"
		android:layout_width="115dp"
		android:layout_height="34dp"
		android:layout_marginStart="24dp"
		android:layout_marginBottom="248dp"
		android:gravity="center"
		android:text=""
		android:textSize="20dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

	<TextView
		android:id="@+id/nowname"
		android:layout_width="115dp"
		android:layout_height="34dp"
		android:layout_marginStart="24dp"
		android:layout_marginBottom="8dp"
		android:gravity="center"
		android:text=""
		android:textSize="20dp"
		app:layout_constraintBottom_toTopOf="@+id/nowweather"
		app:layout_constraintStart_toStartOf="parent" />

	<TextView
		android:id="@+id/highname"
		android:layout_width="115dp"
		android:layout_height="34dp"
		android:layout_marginBottom="8dp"
		android:gravity="center"
		android:text=""
		android:textSize="20dp"
		app:layout_constraintBottom_toTopOf="@+id/highdegree"
		app:layout_constraintEnd_toStartOf="@+id/lowname"
		app:layout_constraintStart_toEndOf="@+id/nowname" />

	<TextView
		android:id="@+id/highdegree"
		android:layout_width="115dp"
		android:layout_height="34dp"
		android:layout_marginBottom="248dp"
		android:gravity="center"
		android:text=""
		android:textSize="20dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toStartOf="@+id/lowdegree"
		app:layout_constraintStart_toEndOf="@+id/nowweather" />

	<TextView
		android:id="@+id/lowdegree"
		android:layout_width="115dp"
		android:layout_height="34dp"
		android:layout_marginEnd="24dp"
		android:layout_marginBottom="248dp"
		android:gravity="center"
		android:text=""
		android:textSize="20dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent" />

	<TextView
		android:id="@+id/lowname"
		android:layout_width="115dp"
		android:layout_height="34dp"
		android:layout_marginEnd="24dp"
		android:layout_marginBottom="8dp"
		android:gravity="center"
		android:text=""
		android:textSize="20dp"
		app:layout_constraintBottom_toTopOf="@+id/lowdegree"
		app:layout_constraintEnd_toEndOf="parent" />

	<Button
		android:id="@+id/button"
		android:layout_width="220dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="95dp"
		android:layout_marginEnd="96dp"
		android:layout_marginBottom="38dp"
		android:onClick="point"
		android:text="@string/viewpoint"
		app:layout_constraintBottom_toTopOf="@+id/button2"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

	<Button
		android:id="@+id/button2"
		android:layout_width="220dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="95dp"
		android:layout_marginEnd="96dp"
		android:layout_marginBottom="70dp"
		android:onClick="food"
		android:text="@string/shop"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
